<resources>
    <string name="no_more">没有更多了</string>
    <string name="no_money_detail">暂无明细数据</string>
    <string name="no_login_tips">您还未登录，赶紧登录吧~</string>
    <string name="payment_details">收支明细</string>
    <string name="my_debit_card">我的银行卡</string>
    <string name="have_withdrawal">已提现</string>
    <string name="the_settlement">将结算</string>
    <string name="can_withdrawal">可提现:</string>
    <string name="complete_deal">已完成的交易</string>
    <string name="withdrawal_to">提现到：</string>
    <string name="withdrawal_confirm">确 认 提 现</string>
    <string name="gold_text">金额：</string>
    <string name="withdrawal_min">提现金额不小于%s元</string>
    <string name="today_withdrawal_money">本日最大提现金额：%s元</string>
    <string name="bind_bankcard_tips">请保证姓名、银行卡、开户人为同一人</string>
    <string name="card_owner">持卡人</string>
    <string name="card_owner_name">请输入持卡人姓名</string>
    <string name="identity_card">身份证</string>
    <string name="identity_card_no">请输入持卡人身份证</string>
    <string name="deposit_bank">开户银行</string>
    <string name="deposit_bank_choose">请选择开户银行</string>
    <string name="bankcard_num">银行卡号</string>
    <string name="bankcard_num_input">请输入银行卡号码</string>
    <string name="bankcard_num_input_continue">请重复输入一遍卡号</string>
    <string name="bind_bankcard_notice">注意：\n.填写真实信息资料，才能提现货款\n.仅支持储蓄卡，请不要填写信用卡</string>
    <string name="bind_bankcard_confirm">绑 定 银 行 卡 号</string>
    <string name="replace_bind_bankcard">更 换 银 行 卡</string>
    <string name="not_settlement_log">暂无未结算数据</string>
    <string name="not_have_withdrawal_log">暂无提现数据</string>
    <string name="not_date">暂无数据</string>
    <string name="not_income_detail">暂无收支明细数据</string>
    <string name="order_detail">订单详情</string>
    <string name="piao">票</string>
    <string name="goods_snapshot">商品快照</string>
    <string name="copy_order_info_err">订单号异常，复制失败！！</string>
    <string name="copy_success">复制成功！!</string>
    <string name="goods_remark">留言：</string>
    <string name="goods_money">商品金额：</string>
    <string name="goods_info">商品信息：</string>
    <string name="consignee_info">收货人信息: </string>
    <string name="order_create_time">下单时间：</string>
    <string name="order_no">订单号：</string>
    <string name="buyer_1">买家：</string>
    <string name="exchange_success">兑换成功</string>
    <string name="order_id">订单编号：</string>
    <string name="create_time">下单时间：</string>
    <string name="exchange_time">兑换时间：</string>
    <string name="shitupiao_detail">师徒票明细</string>
    <string name="no_goods">没有找到商品</string>
    <string name="shitupiao_exchange">师徒票兑换</string>
    <string name="confirm_exchange">确认兑换</string>
    <string name="contact_service">联系客服</string>
    <string name="remain_count">剩余：%d件</string>
    <string name="exchange_count">已兑换%d件</string>
    <string name="express_cost">快递：%s</string>
    <string name="immediately_exchange">立即兑换</string>
    <string name="no_integral">师徒票不足</string>
    <string name="goods_introduce">商品介绍</string>
    <string name="total">合计：</string>
    <string name="service">客服</string>
    <string name="integral_exchange_history">兑换记录</string>
    <string name="help_notes">帮助说明</string>
    <string name="all">全部</string>
    <string name="integral_unit">师徒票</string>
    <string name="integral_exchage_mall">兑换商城</string>
    <string name="integral_exchage_filter">筛选</string>
    <string name="exchange_gift">兑换好礼</string>
    <string name="integral_help">帮助说明</string>
    <string name="integral_history">兑换记录</string>
    <string name="good_detail">商品详情</string>
    <string name="correlation_goods">相关商品</string>
    <string name="coupon">优惠卷</string>
    <string name="coupon_tips">暂无优惠卷</string>
    <string name="give_seller_msg">给卖家留言</string>
    <string name="goods_photo">商品图片</string>
    <string name="goods_photo_tips">(添加图片后，点击可编辑描述)</string>
    <string name="delete">删除</string>
    <string name="photo_edit">图片编辑</string>
    <string name="photo_desc">图片描述</string>
    <string name="photo_desc_edit_hint">输入图片描述，将在商品详情图下方展示。</string>
    <string name="app_name">师徒部落</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="record_voice_tip">说说你是怎么样的人?\n一句话介绍也能让成功率提高到80%哦!</string>
    <string name="age1">王明今年 %1$d 岁</string>
    <string name="sd">Hello <b><i>Slanted Android</i></b>,You are bold</string>
    <string name="orderHumanPhone">4008633361</string>
    <string name="hotline">400-8633-361</string>
    <string name="waiting">请等待...</string>
    <string name="no_goods_date">暂无商品数据</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="click_twice_to_exit">连续两次退出</string>
    <string name="no_dynamic_newmsg">暂无新消息</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal"></string>
    <string name="xlistview_footer_hint_ready"></string>
    <string name="xlistview_footer_hint_nothing"></string>
    <string name="xlistview_footer_hint_load">正在加载&#8230;</string>
    <string name="xlistview_footer_hint_End"></string>
    <string name="loading">正在加载</string>
    <string name="pay_by_wx_title">通过微信支付</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="unifiedorder_v3_wx">APP支付生成预支付订单</string>
    <string name="pay__pre_by_wxap">生成APP微信支付参数</string>
    <string name="pay_by_wxap">调起微信支付</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="getting_prepayid">正在获取预支付订单&#8230;</string>
    <string name="red_packet">红包</string>
    <string name="cast_bean">撒豆</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="button_ok">确定</string>
    <string name="im_default_redpacket_message">恭喜发财</string>
    <string name="click_set_owner">请点击设置话题</string>
    <string name="apply_friend">申请好友</string>
    <string name="send_gift">送礼物</string>
    <string name="no_wheat">禁麦</string>
    <string name="shot_off">踢下麦位</string>
    <string name="topic_set">话题设置</string>
    <string name="hint_input_topic">请输入直播话题</string>
    <string name="enter">确定</string>
    <string name="temp_account_ok">注册或登录</string>
    <string name="temp_account_cancel">取消</string>
    <string name="temp_account_msg">登录就能使用此功能</string>
    <string name="title_open_new_direct_screen">开启我的直播</string>
    <string name="dialog_title_in_room">%1$s的直播间</string>
    <string name="open_direct_screen">开启直播</string>
    <string name="enter_start">确定启动</string>
    <string name="report">举报</string>
    <string name="room_password">房间密码:</string>
    <string name="msg_handling">正在处理&#8230;</string>
    <string name="msg_loading_new_gift">正在加载最新礼物列表\n请稍后&#8230;</string>
    <string name="msg_input_screen_topic">请填写直播话题</string>
    <string name="msg_publish_dynamic_everybody">发布动态通知大家</string>
    <string name="msg_screen_dynamic_content">嗨,大家好!我开启了语音直播室,快来和我一起畅聊话题吧!</string>
    <string name="msg_encrypt_password_tips">加密密码格式为6位数字</string>
    <string name="notify_network_error">网络无法联通，请检查网络</string>
    <string name="notify_no_network">网络无连接，请检查网络</string>
    <string name="not_default_appid">房间信息错误,请联系后台</string>
    <string name="direct_scree_backgrounp">直播服务正在运行</string>
    <string name="close_publish_help_tip">关闭后将不再收到推荐\n系统会退回你全部的赏金\n确定要关闭吗？</string>
    <string name="close_publish_help_tip_1hour">关闭后将不再收到推荐\n系统会扣掉你一半的赏金\n确定要关闭吗？</string>
    <string name="delete_publish_help_tip">你收到的推荐也将被删除\n确定要删除吗？</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="modify_info"><u>修改信息</u></string>
    <string name="rank_people_hub">人脉</string>
    <string name="rank_active">活跃</string>
    <string name="rank_earnings">收益</string>
    <string name="rank_active_index">活跃指数</string>
    <string name="rank_di">第%d名</string>
    <string name="rank_earnings_index">收益指数</string>
    <string name="rank_tuhao_index">土豪指数</string>
    <string name="rank_people_hub_index">人脉指数</string>
    <string name="rank_people">人</string>
    <string name="rank_no_rank">未排名</string>
    <string name="common_photo_album">相册</string>
    <string name="common_more_can_choise">最多可选</string>
    <string name="common_zhang">张</string>
    <string name="common_version_know">" V 版本号未知"</string>
    <string name="common_current_time">刚刚</string>
    <string name="common_minute_before">%d分钟前</string>
    <string name="common_hour_before">%d小时前</string>
    <string name="common_day_before">%d天前</string>
    <string name="common_month_day_hhmm">M月d日 HH:mm</string>
    <string name="common_photo_save_to_stbl">图片已保存在SD卡的stbl文件夹</string>
    <string name="common_network_not_available">网络不可用</string>
    <string name="common_operate_err">操作失败</string>
    <string name="common_connection_timeout">连接超时</string>
    <string name="common_service_busyness">服务繁忙,请稍候重试</string>
    <string name="common_connection_err">连接错误</string>
    <string name="common_response_timeout">响应超时</string>
    <string name="common_dispose">处理中……</string>
    <string name="common_copy_success">已复制到剪切板</string>
    <string name="common_version_upate">师徒部落新版本更新</string>
    <string name="common_download_err">下载失败</string>
    <string name="common_download_err_reset">下载失败，点击重试</string>
    <string name="common_download_start">开始下载</string>
    <string name="common_downloading">正在下载：</string>
    <string name="common_choise_photo">选取图片</string>
    <string name="common_check_look">查看</string>
    <string name="common_save_to_phone">保存到手机</string>
    <string name="common_decode_qr">识别二维码</string>
    <string name="common_save">保存</string>
    <string name="common_open_red_package">打 开</string>
    <string name="common_save_error">保存失败！</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="common_photo_save_to">图片已保存至：</string>
    <string name="common_netword_not_available_tips">网络不可用,请先设置网络</string>
    <string name="common_error">错误</string>
    <string name="common_greather_than_zero_num">请输入一个大于0的数字</string>
    <string name="common_num_can_not_lessthan">数量不能小于</string>
    <string name="common_num_can_not_greatherthan">数量不能大于</string>
    <string name="common_verification_infomation">验证信息</string>
    <string name="common_introduce_you_self">介绍一下你自己吧 (必填喔)</string>
    <string name="common_add_friend_to_user"><![CDATA[添加<font color=\'#DEA524\'>%s</font>为好友]]></string>
    <string name="ad_order_detail">订单详情</string>
    <string name="rp_send_count">发出红包&#160;%s&#160;个</string>
    <string name="rp_random">拼手气红包</string>
    <string name="rp_common">普通红包</string>
    <string name="rp_done">已领完</string>
    <string name="rp_timeout">已过期</string>
    <string name="rp_ge">个</string>
    <string name="rp_yuan">元</string>
    <string name="rp_me_receive">我收到的</string>
    <string name="rp_me_send">我发出的</string>
</resources>