<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.stbl.stbl.widget.titlebar.NavigationView
            android:id="@id/navigation_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/navigation_view"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/bgs_open_direct_screen" />

        <TextView
            android:id="@id/controls1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/navigation_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_40"
            android:drawablePadding="@dimen/dp_5"
            android:drawableTop="@drawable/ico_home_window_screen"
            android:gravity="center_horizontal"
            android:text="@string/open_direct_screen"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_28" />

        <EditText
            android:id="@+id/input_topic_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_below="@id/controls1"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/edge_bgs_gray_five_round_style"
            android:gravity="center"
            android:hint="@string/msg_input_screen_topic"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:singleLine="true"
            android:textColor="@color/font_black"
            android:textColorHint="@color/font_gray"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/controls3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_topic_edit"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_15"
            android:drawableLeft="@drawable/maintab_menu_dynamic_2x"
            android:drawablePadding="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/msg_publish_dynamic_everybody"
            android:textColor="@color/gray1"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/input_content_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/controls3"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/edge_bgs_gray_five_round_style"
            android:gravity="left|top"
            android:minLines="3"
            android:hint="@string/msg_screen_dynamic_content"
            android:padding="@dimen/dp_10"
            android:textColor="@color/font_black"
            android:textColorHint="@color/font_gray"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:id="@+id/ll_room_type_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_content_edit"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_50"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_room_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="房间访问权限："
                android:textColor="@color/gray1"
                android:textSize="@dimen/sp_14"/>

            <RadioGroup
                android:id="@+id/rdg_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_content_edit"
                android:layout_toRightOf="@+id/tv_room_type">

                <RadioButton
                    android:id="@+id/rb_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="公开"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:textSize="@dimen/sp_14"
                    android:checked="true"
                    android:drawableLeft="@drawable/register_radiobutton_selector"
                    android:drawablePadding="5dp"
                    android:textColor="@color/gray1"
                    android:button="@null"/>

                <RadioButton
                    android:id="@+id/rd_encrypt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="加密"
                    android:textSize="@dimen/sp_14"
                    android:checked="false"
                    android:drawablePadding="5dp"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:drawableLeft="@drawable/register_radiobutton_selector"
                    android:textColor="@color/gray1"
                    android:button="@null"/>
            </RadioGroup>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/ll_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_room_type_parent"
            android:layout_marginLeft="@dimen/dp_70"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_room_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="设置密码："
                android:layout_centerVertical="true"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/gray1"/>

            <EditText
                android:id="@+id/et_encrypt_password"
                android:layout_width="@dimen/dp_120"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_80"
                android:layout_toRightOf="@+id/tv_room_password"
                android:background="@null"
                android:gravity="center"
                android:padding="@dimen/dp_5"
                android:maxLength="6"
                android:inputType="number"
                />
            <View
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:background="@color/gray3"
                android:layout_below="@+id/et_encrypt_password"
                android:layout_alignLeft="@+id/et_encrypt_password"
                android:layout_alignRight="@+id/et_encrypt_password"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_enter_start"
            style="@style/common_bnt_long"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@id/ll_input_password"
            android:layout_marginLeft="@dimen/dp_70"
            android:layout_marginRight="@dimen/dp_70"
            android:layout_marginTop="@dimen/dp_40"
            android:onClick="onEnterStart"
            android:text="@string/enter_start"
            android:textSize="@dimen/sp_18" />
    </RelativeLayout>
</ScrollView>
